--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
                     infoBoxes: [ 
                         { title: 'Sıkça Sorulan Sorular', description: 'Öğrencilerin en çok merak ettiği konular hakkında bilgiler.', link: 'page/sss.html', linkText: 'Sıkça Sorulan Soruları Gör', category: 'Akademik' },
                         { title: 'Tercih Dönemi', description: 'Üniversite tercih dönemine ilişkin önemli bilgiler ve tarihler.', link: 'page/tercih-donemi.html', linkText: 'Tercih Bilgilerini Gör', category: 'Kayıt' },
+                        { title: 'Bölüm Sıralamaları', description: '2024 yılı bölüm sıralamaları ve taban puanları.', link: 'page/siralamalar.html', linkText: 'Sıralamaları Gör', category: 'Kayıt' },
                         { title: 'Kayıt İşlemleri', description: 'Yeni öğrenciler için kayıt prosedürleri ve gerekli belgeler.', link: 'page/kayit-islemleri.html', linkText: 'Kayıt Bilgilerini Gör', category: 'Kayıt' },
                         { title: 'Barınma Olanakları', description: 'Beytepe kampüs içi konaklama seçenekleri hakkında bilgiler.', link: 'page/barinma.html', linkText: 'Barınma Olanaklarını Gör', category: 'Barınma' },
                         { title: "Beytepe Çevresindeki KYK'lar", description: 'Beytepe kampüsü çevresindeki KYK yurtlarını inceleyin', link: 'page/cevredeki-kyklar.html', linkText: "KYK'ları Gör", category: 'Barınma' },
