--- a/index.html
+++ b/index.html
@@ -505,6 +505,7 @@
                         { title: 'Öğrenci Toplulukları', description: 'Aktif öğrenci toplulukları ve toplulukların iletişim bilgileri.', link: 'page/ogrenci-topluluklari.html', linkText: 'Toplulukları Gör', category: 'Öğrenci' },
                         { title: 'Akademik Takvim', description: 'Güncel akademik yıl takvimi ve önemli tarihler.', link: 'page/akademik-takvim.html', linkText: 'Akademik Takvimi Gör', category: 'Akademik' },
                         { title: 'Kampüs Haritası', description: 'Beytepe ve Sıhhiye kampüslerinin interaktif haritaları ve önemli noktalar.', link: 'page/kampus-haritasi.html', linkText: 'Kampüs Haritasını Gör', category: 'Kampüs' },
+                        { title: 'Fakülte ve Yüksekokul Lokasyonları', description: 'Tüm fakülte ve yüksekokulların kampüs bazlı listesi.', link: 'page/fakulte-yuksekokul-lokasyonlari.html', linkText: 'Lokasyonları Gör', category: 'Kampüs' },
                         { title: 'İletişim', description: 'Beytepe ve Sıhhiye kampüslerinin iletişim bilgileri ve sosyal medya hesapları.', link: 'page/iletisim.html', linkText: 'İletişim Bilgilerini Gör', category: 'Kampüs' }
                     ]
                 }
