--- a/index.html
+++ b/index.html
@@ -494,6 +494,7 @@
                     infoBoxes: [ 
                         { title: 'Sıkça Sorulan Sorular', description: 'Öğrencilerin en çok merak ettiği konular hakkında bilgiler.', link: 'page/sss.html', linkText: 'Sıkça Sorulan Soruları Gör', category: 'Akademik' },
                         { title: 'Tercih Dönemi', description: 'Üniversite tercih dönemine ilişkin önemli bilgiler ve tarihler.', link: 'page/tercih-donemi.html', linkText: 'Tercih Bilgilerini Gör', category: 'Kayıt' },
+                        { title: 'Fakülte ve Yüksekokul Lokasyonları', description: 'Tüm fakülte ve yüksekokulların kampüs bazlı listesi.', link: 'page/fakulte-yuksekokul-lokasyonlari.html', linkText: 'Lokasyonları Gör', category: 'Kayıt' },
                         { title: 'Bölüm Sıralamaları', description: '2024 yılı bölüm sıralamaları ve taban puanları.', link: 'page/siralamalar.html', linkText: 'Sıralamaları Gör', category: 'Kayıt' },
                         { title: 'Kayıt İşlemleri', description: 'Yeni öğrenciler için kayıt prosedürleri ve gerekli belgeler.', link: 'page/kayit-islemleri.html', linkText: 'Kayıt Bilgilerini Gör', category: 'Kayıt' },
                         { title: 'Barınma Olanakları', description: 'Beytepe kampüs içi konaklama seçenekleri hakkında bilgiler.', link: 'page/barinma.html', linkText: 'Barınma Olanaklarını Gör', category: 'Barınma' },
@@ -505,7 +506,6 @@
                         { title: 'Öğrenci Toplulukları', description: 'Aktif öğrenci toplulukları ve toplulukların iletişim bilgileri.', link: 'page/ogrenci-topluluklari.html', linkText: 'Toplulukları Gör', category: 'Öğrenci' },
                         { title: 'Akademik Takvim', description: 'Güncel akademik yıl takvimi ve önemli tarihler.', link: 'page/akademik-takvim.html', linkText: 'Akademik Takvimi Gör', category: 'Akademik' },
                         { title: 'Kampüs Haritası', description: 'Beytepe ve Sıhhiye kampüslerinin interaktif haritaları ve önemli noktalar.', link: 'page/kampus-haritasi.html', linkText: 'Kampüs Haritasını Gör', category: 'Kampüs' },
-                        { title: 'Fakülte ve Yüksekokul Lokasyonları', description: 'Tüm fakülte ve yüksekokulların kampüs bazlı listesi.', link: 'page/fakulte-yuksekokul-lokasyonlari.html', linkText: 'Lokasyonları Gör', category: 'Kampüs' },
                         { title: 'İletişim', description: 'Beytepe ve Sıhhiye kampüslerinin iletişim bilgileri ve sosyal medya hesapları.', link: 'page/iletisim.html', linkText: 'İletişim Bilgilerini Gör', category: 'Kampüs' }
                     ]
                 }
