--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Hacettepe Üniversitesi Bilgilendirme">
     <meta property="og:description" content="Hacettepe Üniversitesi öğrencileri için kapsamlı bilgilendirme platformu">
-    <meta property="og:url" content="https://hacettepebilgi.github.io">
-    <link rel="canonical" href="https://hacettepebilgi.github.io" />
+    <meta property="og:url" content="https://hacettepe.biz">
+    <link rel="canonical" href="https://hacettepe.biz" />
     <title>Hacettepe Üniversitesi Bilgilendirme | Öğrenci Rehberi</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
