--- a/hakkinda.html
+++ b/hakkinda.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Hacettepe Üniversitesi, site hakkında, iletişim">
     <meta name="author" content="Akıner Kısa">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://hacettepe.biz/hakkinda.html" />
     <title>Site Hakkında - Hacettepe Üniversitesi</title>
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png">
@@ -122,7 +123,7 @@
                             <p class="text-gray-600 mb-3">
                                 Siteye katkıda bulunmak için GitHub üzerinden projeye erişebilirsiniz:
                             </p>
-                            <a href='https://github.com/akinerkisa/hacettepebilgi.github.io' 
+                            <a href='https://github.com/akinerkisa/hacettepe.biz' 
                                class="text-red-600 hover:text-red-700 inline-flex items-center group">
                                 GitHub Projesi
                                 <svg class="w-4 h-4 ml-1 transform transition-transform group-hover:translate-x-1" viewBox="0 0 24 24" fill="none">
