--- a/hakkinda.html
+++ b/hakkinda.html
@@ -123,7 +123,7 @@
                             <p class="text-gray-600 mb-3">
                                 Siteye katkıda bulunmak için GitHub üzerinden projeye erişebilirsiniz:
                             </p>
-                            <a href='https://github.com/akinerkisa/hacettepe.biz' 
+                            <a href='https://github.com/hacettepebilgi/hacettepebilgi.github.io' 
                                class="text-red-600 hover:text-red-700 inline-flex items-center group">
                                 GitHub Projesi
                                 <svg class="w-4 h-4 ml-1 transform transition-transform group-hover:translate-x-1" viewBox="0 0 24 24" fill="none">
